[Fix] problemsa cors, problema de jwt